Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-07-20 (SVN):
    * hexenworld/server/pr_edict.c: Fixed segmentation fault in case of
      bad pointer in NUM_FOR_EDICT().  Removed extra title prints from
      ED_PrintEdict_f() and ED_PrintEdicts().

2011-07-20 (SVN):
    * Bumped beta version date to 2011-07-20 .
    * hexen2/Makefile: Allowed ogg/vorbis for dos builds. For now I am
      using tremor for dos, but it also builds and runs perfectly fine
      with libvorbis too. The DOS build define CODECS_USE_ZONE which is
      essential.
    * Makefiles: Added the CODECS_USE_ZONE compile time option. If set
      to yes, codecs will allocate on the zone instead of system memory
      which may be useful for ports to memory-tight platforms. Cleaned
      up the makefiles a bit.
    * oslibs/dos/codecs: Recompiled libmad to use Z_SECZONE. Added ogg
      and vorbis import libraries and headers.
    * oslibs/windows/codecs/include/vorbis/vorbisenc.h: Deleted unused
      header.
    * snd_mp3.c: Unless CODECS_USE_ZONE is defined, leave Z_ alone and
      allocate libmad decoding buffers (ca. 64kb) on the system memory.
    * zone.c: Added setup for secondary zone size for CODECS_USE_ZONE.
    * h2config.h: Added memory requirements for mp3 and vorbis decoders
      in preparation for CODECS_USE_ZONE feature.
    * updated documents.

2011-07-19 (SVN):
    * zone.c: Revised multiple zones management. Keep a linked list of
      initialized zones and search properly. More foolproof against
      zoneid assignment screw-ups, too (see svn revisions 4152 and 4153
      from today.)

2011-07-19 (SVN):
    * zone.c (Z_TagMalloc): Fixed id assignment oversight for Z_SECZONE
      which would seriously mess up zone-allocated pointers in Z_Free().
      The bug had been there since the introduction of secondary zone 4
      years ago...

2011-07-17 (SVN):
    * hexenworld/shared/model.h (qmodel_t): Disabled the cache_user_t